fix: keep footer from overlapping the bottom row

--- a/client/style/card.styl
+++ b/client/style/card.styl
@@ -35,3 +35,7 @@ card_margin = 2px
     h2
       color #ffff77
       background #2d0d6d
+
+.card:last-of-type
+  margin-bottom 50px
+  
